--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <head>
     <title>Basic Property Grid</title>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
+
+    <link rel="stylesheet" href="./css/reset.css" type="text/css">
+
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
