--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <html>
 
 <head>
-    <title>Basic Property Grid</title>
+
+    <title>Subject Action Object</title>
+
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
 
     <link rel="stylesheet" href="./css/reset.css" type="text/css">
 
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
