Added blinking cursor.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
 
-    <link rel="stylesheet" href="./css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/assets/styles/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/assets/styles/css/blinking-cursor.css" type="text/css">
+    <link rel="stylesheet" href="http://127.0.0.1:8090/assets/app.css" type="text/css">
 
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 </head>
