--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Subject Action Object</title>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.3.14/polyfill.min.js"></script>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
 
     <link rel="stylesheet" href="/assets/styles/css/reset.css" type="text/css">
