--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
     <title>Subject Action Object</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.3.14/polyfill.min.js"></script>
 
     <link rel="stylesheet" href="/assets/styles/css/reset.css" type="text/css">
